[project]
name = "SenseVoice"
version = "0.1.0"
description = "SenseVoice语音识别项目"
authors = [
    {name = "SenseVoice Team"}
]
dependencies = [
    "torch<=2.3",
    "torchaudio",
    "modelscope",
    "huggingface",
    "huggingface_hub",
    "funasr>=1.1.3",
    "numpy<=1.26.4",
    "gradio",
    "fastapi>=0.111.1",
]
requires-python = ">=3.12,<3.13"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# 如果需要指定特定的包源，可以在这里配置
